deployments/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apicerberus
  labels:
    app.kubernetes.io/name: apicerberus
    app.kubernetes.io/component: namespace
